添加 LICENSE.txt。

--- a/LAccounts.vcxproj.filters
+++ b/LAccounts.vcxproj.filters
@@ -35,4 +35,7 @@
     </None>
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="LICENSE.txt" />
+  </ItemGroup>
 </Project>
