--- a/LAccounts.vcxproj
+++ b/LAccounts.vcxproj
@@ -143,6 +143,9 @@
     <None Include="lemon.lad" />
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="LICENSE.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
